Atualiza arquivos formacao.html e portfolio.html

--- a/trabalho de desenvolvimento web/portfolio.html
+++ b/trabalho de desenvolvimento web/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Sobre Mim</a>
+    <a href="sobremim.html">Sobre Mim</a>
     <a href="formacao.html">Formação</a>
     <a href="portfolio.html">Portfólio</a>
     <a href="contato.html">Contato</a>
@@ -23,7 +23,7 @@
     <h2>Portfólio</h2>
     <p>Alguns de meus trabalhos feitos:</p>
     <ul>
-      <li><a href="index.html">Site simples com HTML/CSS</a></li>
+      <li><a href="sobremim.html">Site simples com HTML/CSS</a></li>
       <li><a href="p2.html">Calculadora feita em aula</a></li>
     </ul>
   </main>
