--- a/trabalho de desenvolvimento web/formacao.html
+++ b/trabalho de desenvolvimento web/formacao.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Sobre Mim</a>
+    <a href="sobremim.html">Sobre Mim</a>
     <a href="formacao.html">Formação</a>
     <a href="portfolio.html">Portfólio</a>
     <a href="contato.html">Contato</a>
