Adiciona comentários explicativos nos arquivos HTML

--- a/trabalho de desenvolvimento web/contato.html
+++ b/trabalho de desenvolvimento web/contato.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Contato</title>
   <style>
+    /* Estilos para corpo, navegação, títulos e inputs */
     body { background: #0B1C2C; color: white; font-family: Arial; margin: 0; }
     nav { background: #0B1C2C; padding: 10px; text-align: center; }
     nav a { color: #D4AF37; margin: 10px; text-decoration: none; }
@@ -15,6 +16,7 @@
   </style>
 </head>
 <body>
+  <!-- Menu de navegação entre páginas -->
   <nav>
     <a href="sobremim.html">Sobre Mim</a>
     <a href="formacao.html">Formação</a>
@@ -24,18 +26,20 @@
   <main>
     <h2>Contato</h2>
     <p>Preencha abaixo para me enviar uma mensagem:</p>
+    <!-- Formulário de contato -->
     <form>
-      <!-- Nome da pessoa -->
+      <!-- Campo para digitar o nome -->
       <label for="nome">Nome:</label><br>
       <input type="text" id="nome" name="nome"><br>
-      <!-- Email da pessoa -->
+      <!-- Campo para digitar o email -->
       <label for="email">Email:</label><br>
       <input type="email" id="email" name="email"><br>
-      <!-- Mensagem -->
+      <!-- Campo pra digitar a mensagem -->
       <label for="mensagem">Mensagem:</label><br>
       <textarea id="mensagem" name="mensagem" rows="4"></textarea><br>
       <input type="submit" value="Enviar">
     </form>
+    <!-- Informação de contato alternativa -->
     <p>Ou me chame no WhatsApp: (32) 99997-1856</p>
   </main>
 </body>
