--- a/trabalho de desenvolvimento web/portfolio.html
+++ b/trabalho de desenvolvimento web/portfolio.html
@@ -1,10 +1,12 @@
 
+<!-- Página de portfólio com exemplos de trabalhos -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <title>Portfólio</title>
   <style>
+    /* Estilos para corpo, navegação, títulos e lista */
     body { background: #0B1C2C; color: white; font-family: Arial; margin: 0; }
     nav { background: #0B1C2C; padding: 10px; text-align: center; }
     nav a { color: #D4AF37; margin: 10px; text-decoration: none; }
@@ -13,6 +15,7 @@
   </style>
 </head>
 <body>
+  <!-- Menu de navegação entre páginas -->
   <nav>
     <a href="sobremim.html">Sobre Mim</a>
     <a href="formacao.html">Formação</a>
@@ -21,9 +24,12 @@
   </nav>
   <main>
     <h2>Portfólio</h2>
+    <!-- Lista de trabalhos realizados -->
     <p>Alguns de meus trabalhos feitos:</p>
     <ul>
+      <!-- Link para site pessoal -->
       <li><a href="sobremim.html">Site simples com HTML/CSS</a></li>
+      <!-- Link para calculadora -->
       <li><a href="p2.html">Calculadora feita em aula</a></li>
     </ul>
   </main>
