--- a/trabalho de desenvolvimento web/sobremim.html
+++ b/trabalho de desenvolvimento web/sobremim.html
@@ -1,3 +1,4 @@
+<!-- Página pessoal com informações sobre mim -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -12,6 +13,7 @@
   </style>
 </head>
 <body>
+  <!-- Menu de navegação entre páginas -->
   <nav>
     <a href="sobremim.html">Sobre Mim</a>
     <a href="formacao.html">Formação</a>
@@ -20,6 +22,7 @@
   </nav>
   <main>
     <h2>Sobre Mim</h2>
+    <!-- Texto de apresentação -->
     <p>Me chamo Jonatas, sou estudante de Análise e Desenvolvimento de Sistemas e sempre tive uma forte afinidade com tecnologia. Gosto de explorar novas ferramentas, entender como as coisas funcionam por trás dos bastidores e aprender constantemente — afinal, acredito que o conhecimento é o principal motor do crescimento profissional.</p>
 
 <p> Também sou apaixonado por música, que sempre esteve presente na minha vida como uma forma de expressão e inspiração. Já tive a oportunidade de servir ao Exército, uma experiência que contribuiu bastante para o meu amadurecimento pessoal e desenvolvimento de disciplina, responsabilidade e resiliência — valores que levo comigo em qualquer ambiente. </p>
