--- a/trabalho de desenvolvimento web/formacao.html
+++ b/trabalho de desenvolvimento web/formacao.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Formação</title>
   <style>
+    /* Estilos básicos para corpo, navegação e títulos */
     body { background: #0B1C2C; color: white; font-family: Arial; margin: 0; }
     nav { background: #0B1C2C; padding: 10px; text-align: center; }
     nav a { color: #D4AF37; margin: 10px; text-decoration: none; }
@@ -13,6 +14,7 @@
   </style>
 </head>
 <body>
+  <!-- Menu de navegação entre páginas -->
   <nav>
     <a href="sobremim.html">Sobre Mim</a>
     <a href="formacao.html">Formação</a>
@@ -20,6 +22,7 @@
     <a href="contato.html">Contato</a>
   </nav>
   <main>
+    <!-- Lista de cursos, conhecimentos e idiomas -->
     <h2>Formação</h2>
     <p> Cursando Análise e Desenvolvimento de Sistemas (Uninter).<br>
       Tecnico em Mecânica (IF Sudeste MG).<br>
